XM1-35887: Avoid npe